Harden module flows and expand coverage
Add safer /back warmup/cooldown handling, public homes support, inventory writeback guards, and broader module tests.